fixed carussel on mobile

--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -12,6 +12,7 @@
 
     .carussel-container {
         height: 70%;
+        max-width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -21,19 +22,23 @@
             display: flex;
             flex-direction: row;
             align-items: center;
+            justify-content: center;
             height: 70%;
 
             .project-picture {
-                height: 100%;
+                max-height: 100%;
+                max-width: 70%;
             }
 
             .arrow-button {
                 height: 30%;
+                max-width: 15%;
                 cursor: pointer;
                 border: 0;
 
                 .arrow-image{
-                    height: 100%;
+                    max-height: 100%;
+                    max-width: 100%;
                 }
             }
             
